# prototype

./: CMakeLists.txt  README.md
impl/inc/: detector_prototype.h
impl/src/: CMakeLists.txt  main.cpp
